src/app/components/event/stats-table/event.card.stats-table.component.css
mat-icon.tooltip {
  vertical-align: middle;
  margin-left: 0.5em;
  font-size: 14px;
  width: 14px;
  height: 14px;
}

/*mat-card{*/
/*  min-height: 100vh;*/
/*  padding: 0;*/
/*}*/

mat-form-field {
  padding: 0 1em;
  width: 100%
}


mat-table {
  padding-bottom: 1em;
  background: transparent;
}

.mat-header-cell {
  font-size: unset;
}

.table-container {
  overflow-x: auto;
  width: 100%;
}

